changing fw version via interface

--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,14 @@
 [main]
-COLOR_DATA_LED = blue
-COLOR_ADDRESS_LED = red
-COLOR_OFF = gray
-BGCOLOR = #d9d9d9
-DR_MODEL = 2U
+color_data_led = blue
+color_address_led = red
+color_off = gray
+bgcolor = #d9d9d9
+dr_model = 2U
 
 [color_engine]
-KEYWORDS_TAG   = lightblue 
-COMMENTS_TAG   = grey
-INTEGERS_TAG   = lightgreen
-LABELS_TAG     = orange
-DIRECTIVES_TAG = #d99afd
+keywords_tag = lightblue
+comments_tag = grey
+integers_tag = lightgreen
+labels_tag = orange
+directives_tag = #d99afd
+
