--- a/config.ini
+++ b/config.ini
@@ -3,7 +3,7 @@ color_data_led = blue
 color_address_led = red
 color_off = gray
 bgcolor = #d9d9d9
-dr_model = 2B
+dr_model = 2U
 
 [color_engine]
 keywords_tag = lightblue
